[gd_scene load_steps=4 format=3 uid="uid://bgcf2orwtigj4"]

[ext_resource type="Script" path="res://Drag_Objekt.gd" id="1_rpw1d"]
[ext_resource type="Texture2D" uid="uid://dg6a87wefj5ee" path="res://Game_Assets/Asesprite_Bowz/Tank.png" id="2_h703u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vnmek"]
size = Vector2(14, 16)

[node name="Objekt" type="Node2D"]
script = ExtResource("1_rpw1d")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_h703u")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_vnmek")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
